syntax = "proto3";

import "onchain_event.proto";
import "username_proof.proto";

message Empty {}

message FidRetryRequest {
  uint64 fid = 1;
}

service AdminService {
//  rpc SubmitOnChainEvent(OnChainEvent) returns (OnChainEvent);
//  rpc SubmitUserNameProof(UserNameProof) returns (UserNameProof);
  rpc UploadSnapshot(Empty) returns (Empty);
  rpc RetryOnchainEvents(FidRetryRequest) returns (Empty);
}
